<resources>
    <string name="app_name">Store</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu_account">Account</string>
    <string name="menu_home">Home</string>
    <string name="menu_favorite">Favorite</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="firstname">Firstname</string>
    <string name="authentication">Authentication</string>
    <string name="error_login">Invalid email or password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="grn">₴</string>
    <string name="menu_catalog">Catalog</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_add">Create</string>
    <string name="create">Create</string>
</resources>